@@ -19,6 +19,9 @@ dependencies {
     testLogging {
         events "passed", "skipped", "failed"
     }
+    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
   }
 
   constraints {
